[project]
name = "tfjs-uv"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "tensorflow==2.17.0",
    "tf-keras==2.17.0",
    "numpy==1.26.4",
    "tensorflowjs==4.22.0",
    "tensorflow-decision-forests==1.12.0",
    "tensorflow-hub==0.16.1",
    "ydf==0.15.0",
    "setuptools==80.9.0",
]

[tool.uv]
override-dependencies = [
    "tensorflow==2.19.0",
    "tf-keras==2.19.0",
    "numpy==1.26.4",
]
